[package]
name = "batch_exec"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[[bin]]
name = "batch_exec"
path = "src/main.rs"

[dependencies]
error-chain = "0.10"
futures = "0.1"
futures-cpupool = "0.1"
log = "0.3"
log4rs = "0.6"
serde = "0.9"
serde_derive = "0.9"
structopt = "0.0"
structopt-derive = "0.0"
subprocess = "0.1"
toml = "0.3"
